# agents-backend

./: Dockerfile  README.md  README.zh-CN.md  build_log.txt  cleanup_pyproject.py  debug_free_tier.py  debug_state.txt  docker-compose.yml  docker_obfuscate.py  e2b.toml  fix_pyproject.py  full_logs.txt  log_dump.txt  middleware_source.txt  migrate_deps.py  openapi_dump.json  pyproject.toml  requirements.txt  restore_and_migrate.py  run_test_wrapper.py  sanitize_pyproject.py  server_log.txt  server_log2.txt  sig.txt  slide_test_result.txt  staged_response.json  test_agent_output.txt  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_8001.txt  test_traceback.txt
backend/ptc-agent/: Makefile  README.md  __init__.py  pyproject.toml
backend/ptc-agent/agent/: __init__.py  agent.py  graph.py
backend/ptc-agent/agent/backends/: daytona.py
backend/ptc-agent/agent/middleware/background/: middleware.py  orchestrator.py
backend/ptc-agent/agent/prompts/templates/components/: subagent_coordination.md.j2
backend/ptc-agent/agent/tools/: __init__.py  code_execution.py  glob.py
backend/ptc-agent/config/: __init__.py  agent.py  loaders.py  utils.py
backend/ptc-agent/core/: sandbox.py
backend/ptc-agent/ii-agent/src/ii_agent/: alembic.ini
backend/ptc-agent/ii-agent/src/ii_agent/adapters/: __init__.py  sandbox_adapter.py
backend/ptc-agent/ii-agent/src/ii_agent/agents/: __init__.py  codeact.py  function_call.py
backend/ptc-agent/ii-agent/src/ii_agent/agents/parser/: base.py  researcher_parser.py
backend/ptc-agent/ii-agent/src/ii_agent/config/: agent_types.py
backend/ptc-agent/ii-agent/src/ii_agent/controller/: agent.py  agent_controller.py  agent_response.py  state.py  tool_manager.py
backend/ptc-agent/ii-agent/src/ii_agent/core/: cache.py  event.py  event_hooks.py  event_stream.py  exceptions.py  lock.py  logger.py  middleware.py  pubsub.py
backend/ptc-agent/ii-agent/src/ii_agent/core/config/: agent_config.py  enhance_prompt_config.py  ii_agent_config.py  llm_config.py
backend/ptc-agent/ii-agent/src/ii_agent/core/storage/: locations.py
backend/ptc-agent/ii-agent/src/ii_agent/cron/: extend_sandbox_timeout.py
backend/ptc-agent/ii-agent/src/ii_agent/db/: __init__.py  agent.py  chat.py  llm_provider.py  manager.py  models.py
backend/ptc-agent/ii-agent/src/ii_agent/integrations/enhance_prompt/: __init__.py  base.py  factory.py  openai_client.py
backend/ptc-agent/ii-agent/src/ii_agent/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
backend/ptc-agent/ii-agent/src/ii_agent/llm/context_manager/: __init__.py  base.py  llm_compact.py  llm_summarizing.py
backend/ptc-agent/ii-agent/src/ii_agent/media/: __init__.py  media.py
backend/ptc-agent/ii-agent/src/ii_agent/metrics/: __init__.py
backend/ptc-agent/ii-agent/src/ii_agent/migrations/: env.py
backend/ptc-agent/ii-agent/src/ii_agent/migrations/versions/: 0e4d284c9df2_add_waitlist_table.py  1c77501fee34_add_agent_run_task_table.py  56bc51d89bcf_add_chat_messages_table.py  (+12 more)
backend/ptc-agent/ii-agent/src/ii_agent/prompts/: __init__.py  agent_prompts.py  researcher_system_prompt.py  reviewer_system_prompt.py  system_prompt.py
backend/ptc-agent/ii-agent/src/ii_agent/sandbox/: __init__.py  ii_sandbox.py
backend/ptc-agent/ii-agent/src/ii_agent/scripts/: cron_jobs.py  cron_manager.py  import_waitlist.py  refresh_annual_subscription_credits.py  refresh_free_user_credits.py
backend/ptc-agent/ii-agent/src/ii_agent/server/: app.py  cache.py  shared.py
backend/ptc-agent/ii-agent/src/ii_agent/storage/: __init__.py  base.py  factory.py  gcs.py
backend/ptc-agent/ii-agent/src/ii_agent/sub_agent/: base.py  codex.py  design_document_agent.py  report_builder.py  researcher_agent_tool.py  task_agent_tool.py
backend/ptc-agent/ii-agent/src/ii_agent/subscribers/: metrics_subscriber.py  socketio_subscriber.py  subscriber.py
backend/ptc-agent/ii-agent/src/ii_agent/utils/: constants.py
backend/ptc-agent/ii-agent/src/ii_sandbox_server/: README.md  config.py  logger.py  main.py
backend/ptc-agent/ii-agent/src/ii_sandbox_server/client/: client.py
backend/ptc-agent/ii-agent/src/ii_sandbox_server/db/: manager.py  model.py
backend/ptc-agent/ii-agent/src/ii_sandbox_server/lifecycle/: sandbox_controller.py
backend/ptc-agent/ii-agent/src/ii_sandbox_server/sandboxes/: base.py  e2b.py
backend/ptc-agent/ii-agent/src/ii_tool/: logger.py  utils.py
backend/ptc-agent/ii-agent/src/ii_tool/browser/: browser.py  detector.py  utils.py
backend/ptc-agent/ii-agent/src/ii_tool/interfaces/: __init__.py  sandbox.py
backend/ptc-agent/ii-agent/src/ii_tool/mcp/: server.py
backend/ptc-agent/ii-agent/src/ii_tool/mcp_integrations/: playwright.py
backend/ptc-agent/ii-agent/src/ii_tool/tools/: manager.py
backend/ptc-agent/ii-agent/tests/: test_message_history.py
backend/ptc-agent/ii-agent/tests/llm/context_manager/: test_llm_compact.py  test_llm_summarizing.py
backend/ptc-agent/tests/: conftest.py
backend/ptc-agent/tests/integration_tests/: test_execute_code_storage.py  test_grep_glob_sandbox.py  test_mcp_tool_transformation.py  test_search_effectiveness.py
backend/ptc-agent/tests/unit_tests/: test_agent_prompt.py  test_bash_tool.py  test_daytona_backend.py  test_filesystem_tools.py  test_mcp_registry.py  test_ptc_agent.py  test_sandbox.py  test_tool_exposure_modes.py
backend/ptc-agent/utils/storage/: __init__.py  storage_uploader.py
backend_cli/: .gitignore  CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  client.py  formatters.py  mcp_server.py  pyproject.toml  repl.py
backend_cli/commands/: __init__.py  assistants.py  crons.py  ops.py  runs.py  store.py  threads.py
backend_cli/examples/: memory_graph.py  remote_memory_chat.py  simple_memory_chat.py
backend_cli/scripts/: generate_memories.py
backend_cli/tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_commands_assistants.py  test_commands_crons.py  test_commands_ops.py  test_commands_runs.py  test_commands_store.py  test_commands_threads.py  test_formatters.py  test_mcp_server.py  test_repl.py
(+986 files in other folders)
