[project]
name = "agents-backend"
description = """
The Agents Backend is a unified, production-ready platform that combines a high-performance 
FastAPI backend with advanced Agentic AI capabilities. It is designed to be the foundational 
"One Platform" for deploying complex AI workflows, from streaming chat agents to autonomous 
code execution sandboxes.
"""
authors = [
    { name = "Paul", email = "acobapaul@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }

dynamic = ['version']
dependencies = [
    "PyPDF2>=3.0.1",
    "agent_sandbox>=0.0.19",
    "aiofiles==24.1.0",
    "aiohttp>=3.13.2",
    "aiosqlite>=0.22.0",
    "alembic==1.17.2",
    "alibabacloud_oss_v2>=1.2.1",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "arxiv>=2.2.0",
    "asgiref==3.11.0",
    "asyncmy==0.2.10",
    "asyncpg-stubs>=0.30.2",
    "asyncpg==0.31.0",
    "backoff==2.0.1",
    "bcrypt==5.0.0",
    "beautifulsoup4>=4.12.0",
    "bidict==0.23.1",
    "billiard==4.2.4",
    "boto3>=1.42.14",
    "cappa==0.30.4",
    "celery-aio-pool==0.1.0rc8",
    "celery==5.6.0",
    "certifi==2025.11.12",
    "chardet>=5.0.0",
    "click-didyoumean==0.3.1",

    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "click==8.3.1",
    "cryptography==46.0.3",
    "daytona>=0.127.0",
    "ddgs>=9.0.0",
    "deepagents>=0.3.0",
    "dnspython==2.8.0",
    "duckduckgo-search>=8.1.1",
    "dulwich==0.24.10",
    "e2b-code-interpreter>=0.1.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fast-captcha==0.3.2",
    "fastapi-cli==0.0.16",
    "fastapi-limiter==0.1.6",
    "fastapi-pagination==0.15.0",
    "fastapi==0.123.5",
    "fastmcp>=2.14.1",
    "flower==2.0.1",
    "gcloud-aio-storage==9.6.1",
    "gevent==25.9.1",
    "google-cloud-storage==2.18.2",
    "google-genai>=1.56.0",
    "grandalf>=0.8",
    "granian==2.6.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "hiredis==3.3.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "humanize==4.14.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "inquirerpy>=0.3.4",
    "ip2loc==1.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "json-repair>=0.7.0",
    "kombu==5.6.1",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.0",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.6",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-milvus>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.2.0",
    "langchain-text-splitters>=0.3.6",
    "langchain>=1.0.0",
    "langfuse>=3.11.2",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-checkpoint-postgres==2.0.21",
    "langgraph>=0.3.5",
    "langsmith>=0.1.0",
    "libtmux>=0.28.0",
    "litellm>=1.63.11",
    "loguru==0.7.3",
    "lxml>=6.0.2",
    "exa-py>=2.0.2",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markdownify>=1.1.0",
    "markupsafe==3.0.3",
    "mcp>=1.25.0",
    "mdurl==0.1.2",
    "mongomock>=4.3.0",
    "msgspec==0.20.0",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "openpyxl>=3.1.0",
    "oss2>=2.19.1",
    "packaging==25.0",
    "pandas>=2.2.3",
    "pillow==12.0.0",
    "playwright>=1.57.0",
    "pluggy==1.6.0",
    "prek==0.2.19",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "psycopg-pool>=3.2.0",
    "psycopg==3.2.10",
    "pwdlib==0.3.0",
    "pyasn1==0.6.1",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydantic==2.12.5",
    "pygments==2.19.2",
    "pymilvus>=2.3.0",
    "pymupdf>=1.26.7",
    "pymysql==1.1.2",
    "pypdf>=6.5.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.1.0",
    "pytest-postgresql>=7.0.2",
    "pytest-sugar==1.1.1",
    "pytest==9.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv==1.2.1",
    "python-engineio==4.12.3",
    "python-jose==3.5.0",
    "python-magic>=0.4.27",
    "python-multipart==0.0.20",
    "python-pptx>=1.0.2",
    "python-socketio==5.15.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "readabilipy>=0.3.0",
    "redis==7.1.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "rich-toolkit==0.17.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "rtoml==0.13.0",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "socksio>=1.0.0",
    "sqlalchemy-crud-plus==1.13.1",
    "sqlalchemy==2.0.44",
    "sqlparse==0.5.4",
    "sse-starlette>=1.6.5",
    "starlette-context==0.4.0",
    "starlette==0.50.0",
    "structlog>=24.1.0",
    "tavily-python>=0.7.17",
    "tenacity>=9.1.2",
    "termcolor==3.2.0",
    "tornado==6.5.2",
    "tqdm>=4.67.1",
    "type-lens==0.2.6",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "ua-parser-builtins==0.18.0.post1",
    "ua-parser==1.0.1",
    "urllib3==2.5.0",
    "user-agents==2.2.0",
    "uvicorn==0.38.0",
    "vertexai==1.71.1",
    "vine==5.1.0",
    "volcengine>=1.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "wikipedia>=1.4.0",
    "wsproto==1.3.2",
    "yfinance>=0.2.54",
    "stripe>=7.0.0",
    "zope-event==6.1",
    "zope-interface==8.1.1",
]
[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-sugar>=1.1.1",
]
lint = [
    "prek>=0.2.19",
]
server = [
    "aio-pika>=9.5.8",
    "wait-for-it>=2.3.0",
]

[tool.uv]
python-downloads = "manual"
default-groups = ["dev", "lint"]



[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.version]
path = "backend/__init__.py"

[project.scripts]
agents-backend = "backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
